--- a/Trollie/app/src/main/res/layout/activity_main.xml
+++ b/Trollie/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="150dp"
-        android:background="#fff"
+        android:layout_marginBottom="100dp"
+        android:background="#eee"
         />
 
     <!--<ImageView-->
@@ -38,12 +38,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Refresh"
+        android:text="Display Info"
         android:id="@+id/button3"
         android:layout_above="@+id/login_button"
-        android:layout_alignRight="@+id/listView"
-        android:layout_alignEnd="@+id/listView"
-        android:onClick="getMessages"
+        android:layout_centerHorizontal="true"
+        android:onClick="displayInfo"
         />
 
     <com.facebook.login.widget.LoginButton
