--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
     android:weightSum="1">
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
+        android:background="#fff"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="@dimen/activity_horizontal_margin">
+        
+        <ImageView
+            android:id="@+id/location_img"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:contentDescription="locationImage"
+            android:scaleType="fitXY"
+            android:src="@drawable/ninetynine_logo1"/>
+
+        <TextView
+            android:layout_below="@+id/location_img"
+            android:id="@+id/info_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="90dp"
+            android:text="Hello"/>
+
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:layout_width="210dp"
