--- a/Trollie/app/src/main/res/layout/activity_main.xml
+++ b/Trollie/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:textSize="18sp" />
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_alignParentTop="true"
