--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -11,11 +11,11 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="300dp"
         android:background="#fff"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="@dimen/activity_horizontal_margin">
+        card_view:cardElevation="5dp">
         
         <ImageView
             android:id="@+id/location_img"
@@ -37,19 +37,18 @@
 
     <TextView
         android:layout_width="210dp"
-        android:layout_height="43dp"
-        android:text="New Text"
+        android:layout_height="15dp"
         android:id="@+id/itemText"
         android:layout_gravity="center"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView2"
-        android:layout_gravity="center_horizontal"
-        />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+        <!--android:text="Small Text"-->
+        <!--android:id="@+id/textView2"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--/>-->
 
 </LinearLayout>
