added a 'Check-In button to the cards, need to add a function that handles check-ins now

--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -33,6 +33,13 @@
             android:layout_marginTop="90dp"
             android:text="Hello"/>
 
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:onClick="updateLocation"
+            android:layout_gravity="center|bottom"
+            android:text="Check-In"/>
+
     </android.support.v7.widget.CardView>
 
     <TextView
