Check-In button distinguishes which element it is

--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -34,9 +34,9 @@
             android:text="Hello"/>
 
         <Button
+            android:id="@+id/checkInBtn"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:onClick="updateLocation"
             android:layout_gravity="center|bottom"
             android:text="Check-In"/>
 
