--- a/Trollie/app/src/main/res/layout/activity_main.xml
+++ b/Trollie/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:layout_above="@+id/login_button"
         android:layout_centerHorizontal="true"
         android:onClick="displayInfo"
+        android:fontFamily="sans-serif-light"
         />
 
     <com.facebook.login.widget.LoginButton
