--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -31,14 +31,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="90dp"
-            android:text="Hello"/>
+            android:fontFamily="sans-serif-light"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         <Button
             android:id="@+id/checkInBtn"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_gravity="center|bottom"
-            android:text="Check-In"/>
+            android:text="Check-In"
+            android:fontFamily="sans-serif-light"/>
 
     </android.support.v7.widget.CardView>
 
