--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -12,7 +12,7 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_height="350dp"
         android:background="#fff"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="5dp">
@@ -53,7 +53,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="140dp"
                 android:text="10"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="sans-serif-light"/>
 
             <ImageView
                 android:layout_width="50dp"
@@ -70,11 +71,84 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="140dp"
                 android:text="10"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="sans-serif-light"/>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <TextView
+                android:layout_marginLeft="30dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="200dp"
+                android:fontFamily="sans-serif-light"
+                android:textStyle="bold"
+                android:text="18-21"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="200dp"
+                android:fontFamily="sans-serif-light"
+                android:textStyle="bold"
+                android:text="22-25"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="200dp"
+                android:fontFamily="sans-serif-light"
+                android:textStyle="bold"
+                android:text="26-30"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/ageLow"
+                android:layout_marginLeft="30dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="230dp"
+                android:fontFamily="sans-serif-light"
+                android:text="18-21"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/ageMed"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="230dp"
+                android:fontFamily="sans-serif-light"
+                android:text="22-25"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/ageHigh"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="230dp"
+                android:fontFamily="sans-serif-light"
+                android:text="26-30"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
+
+        </LinearLayout>
 
         <ImageView
             android:layout_width="50dp"
