--- a/Trollie/app/src/main/res/layout/list_element.xml
+++ b/Trollie/app/src/main/res/layout/list_element.xml
@@ -12,7 +12,7 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="300dp"
-        android:layout_height="350dp"
+        android:layout_height="320dp"
         android:background="#fff"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="5dp">
@@ -81,6 +81,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/ageLowCat"
                 android:layout_marginLeft="30dp"
                 android:layout_width="80dp"
                 android:layout_height="30dp"
@@ -92,6 +93,7 @@
                 android:textAlignment="center" />
 
             <TextView
+                android:id="@+id/ageMedCat"
                 android:layout_width="80dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="200dp"
@@ -102,6 +104,7 @@
                 android:textAlignment="center" />
 
             <TextView
+                android:id="@+id/ageHighCat"
                 android:layout_width="80dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="200dp"
